<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="edu.ramapo.mparajul.konane.Activities.StartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:layout_marginBottom="25dp"
        app:srcCompat="@mipmap/konane_launcher"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/start_cardview"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/start_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/start"
                android:textColor="#fff"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/resume_cardview"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/start_cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/resume_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/resume"
                android:textColor="#fff"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
