<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ramapo.mparajul.konane.Activities.MainActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:orientation="vertical">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/player1"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:clickable="false"/>
                <Button
                    android:id="@+id/player2"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:clickable="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/player1score"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="0"
                    android:textColor="@color/whiteColor"
                    android:background="@drawable/buttonshape"/>

                <Button
                    android:id="@+id/player2score"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:text="0"
                    android:textColor="@color/whiteColor"
                    android:background="@drawable/buttonshape"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal"
                android:visibility="visible">

                <CheckBox
                    android:id="@+id/checkbox_pruning"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:visibility="visible"
                    android:layout_gravity="center"
                    android:text="@string/do_pruning"
                    android:layout_margin="2dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/select_ply_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/ply_cutoff"
                        android:textColor="@color/whiteColor"
                        android:background="@drawable/buttonshape"/>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/skip_turn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:text="@string/skip_turn"
                    android:visibility="visible"
                    android:textColor="@color/whiteColor"
                    android:background="@drawable/buttonshape"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2">

                <Button
                    android:id="@+id/save_state"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:text="@string/save_game"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:textColor="@color/whiteColor"/>
                <Button
                    android:id="@+id/next_move"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:text="@string/next_move"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:textColor="@color/whiteColor"
                    android:background="@drawable/buttonshape"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal"
                    android:gravity="center">
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/labelRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/labelColumn"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:orientation="vertical">
                </LinearLayout>

                <GridView
                    android:id="@+id/gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnWidth="90dp"
                    android:horizontalSpacing="2dp"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="1dp">
                </GridView>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
